--- a/.github/workflows/daily-marco-edge.yml
+++ b/.github/workflows/daily-marco-edge.yml
@@ -25,6 +25,18 @@ jobs:
           cache: npm
           cache-dependency-path: package-lock.json
 
+
+      - name: Create .env.local
+        run: |
+          : > .env.local
+          echo "POSTMARK_SERVER_TOKEN=${{ secrets.POSTMARK_SERVER_TOKEN }}" >> .env.local
+          echo "POSTMARK_FROM_EMAIL=${{ secrets.POSTMARK_FROM_EMAIL }}" >> .env.local
+          echo "APP_URL=http://localhost:3000" >> .env.local
+          echo "NEXT_PUBLIC_APP_URL=http://localhost:3000" >> .env.local
+          echo "NEXTAUTH_URL=http://localhost:3000" >> .env.local
+          echo "NEXTAUTH_SECRET=local-dev-secret" >> .env.local
+
+
       - name: Install dependencies
         run: npm ci
 
