--- a/.github/workflows/daily-marco-edge.yml
+++ b/.github/workflows/daily-marco-edge.yml
@@ -35,6 +35,7 @@ jobs:
           echo "NEXT_PUBLIC_APP_URL=http://localhost:3000" >> .env.local
           echo "NEXTAUTH_URL=http://localhost:3000" >> .env.local
           echo "NEXTAUTH_SECRET=local-dev-secret" >> .env.local
+          echo "EVENTS_API_SECRET=dummy-events-secret" >> .env.local
 
 
       - name: Install dependencies
