--- a/.github/workflows/daily-marco-edge.yml
+++ b/.github/workflows/daily-marco-edge.yml
@@ -30,11 +30,16 @@ jobs:
           cp .env.example .env.local
           echo "POSTMARK_SERVER_TOKEN=${{ secrets.POSTMARK_SERVER_TOKEN }}" >> .env.local
           echo "POSTMARK_FROM_EMAIL=${{ secrets.POSTMARK_FROM_EMAIL }}" >> .env.local
-
-          # Add required dummy build-time variables
-          echo "STRIPE_SECRET_KEY=sk_test_dummy" >> .env.local
-          echo "STRIPE_WEBHOOK_SECRET=whsec_dummy" >> .env.local
-          echo "EVENTS_API_SECRET=dummy_event_secret" >> .env.local
+          # Required dummies so build doesn’t crash
+          echo "UPSTASH_REDIS_REST_URL=http://localhost:8080" >> .env.local
+          echo "UPSTASH_REDIS_REST_TOKEN=dummy-upstash-token" >> .env.local
+          echo "STRIPE_SECRET_KEY=sk_test_123" >> .env.local
+          echo "STRIPE_WEBHOOK_SECRET=whsec_123" >> .env.local
+          echo "STRIPE_PRICE_ID_STARTER=price_starter" >> .env.local
+          echo "STRIPE_PRICE_ID_PRO=price_pro" >> .env.local
+          echo "STRIPE_PRICE_ID_ELITE=price_elite" >> .env.local
+          echo "STRIPE_PRICE_ID_LIFETIME=price_lifetime" >> .env.local
+          echo "EVENTS_API_SECRET=dummy-events-secret" >> .env.local
 
       - name: Install dependencies
         run: npm ci
